// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ApplicationPage component should be rendered correctly with app infos from registry (not installed) 1`] = `
<FocusTrap
  _createFocusTrap={[Function]}
  active={true}
  focusTrapOptions={
    Object {
      "clickOutsideDeactivates": true,
      "onDeactivate": [Function],
    }
  }
  paused={false}
  tag="div"
>
  <div
    className="sto-modal-page-app"
  >
    <div
      className="sto-app"
    >
      <DefaultButton
        className="sto-app-back"
        icon="back"
        label="Back to the list"
        onClick={[Function]}
        subtle={true}
        tag={[Function]}
        to="/myapps"
      />
      <Connect(Aware)
        app={
          Object {
            "categories": Array [
              "cozy",
            ],
            "developer": Object {
              "name": "Cozy",
              "url": "https://cozy.io",
            },
            "editor": "Cozy",
            "icon": "https://mockcozy.cc/registry/photos/icon",
            "installed": false,
            "langs": Array [
              "en",
              "fr",
            ],
            "licence": "AGPL-3.0",
            "locales": Object {
              "en": Object {
                "changes": "### NEW!!!

 Now on the cozy-store :tada",
                "long_description": "### Features

Enjoy features to grab your data in you Cozy :tada:",
                "short_description": "Gestionnaire de photos pour Cozy v3",
              },
              "fr": Object {
                "long_description": "### Photos

Gestionnaire de photos pour Cozy v3 :tada:",
                "short_description": "Gestionnaire de photos pour Cozy v3",
              },
            },
            "name": "Photos",
            "name_prefix": "Cozy",
            "permissions": Object {
              "albums": Object {
                "description": "Required to manage photos albums",
                "methods": Array [
                  "GET",
                  "POST",
                  "PUT",
                ],
                "type": "io.cozy.photos.albums",
              },
              "apps": Object {
                "description": "Required by the cozy-bar to display the icons of the apps",
                "type": "io.cozy.apps",
                "verbs": Array [
                  "GET",
                ],
              },
              "contacts": Object {
                "description": "Required to to share photos with your contacts",
                "methods": Array [
                  "GET",
                  "POST",
                ],
                "type": "io.cozy.contacts",
              },
              "files": Object {
                "description": "Required for photo access",
                "methods": Array [
                  "GET",
                  "POST",
                  "PUT",
                ],
                "type": "io.cozy.files",
              },
              "settings": Object {
                "description": "Required by the cozy-bar to display Claudy and know which applications are coming soon",
                "type": "io.cozy.settings",
                "verbs": Array [
                  "GET",
                ],
              },
            },
            "platforms": Array [
              Object {
                "type": "ios",
                "url": "",
              },
              Object {
                "type": "linux",
                "url": "",
              },
              Object {
                "type": "android",
                "url": "https://mock.app",
              },
            ],
            "related": null,
            "routes": Object {
              "/": Object {
                "folder": "/",
                "index": "index.html",
                "public": false,
              },
              "/public": Object {
                "folder": "/public",
                "index": "index.html",
                "public": true,
              },
            },
            "screenshots": Array [],
            "short_description": "Photos manager for Cozy v3",
            "slug": "photos",
            "source": "https://github.com/cozy/cozy-drive.git@build-photos",
            "type": "webapp",
            "version": "3.0.0",
          }
        }
        description="Gestionnaire de photos pour Cozy v3"
        name="Photos"
        namePrefix="Cozy"
        parent="/myapps"
      />
      <Wrapped
        app={
          Object {
            "categories": Array [
              "cozy",
            ],
            "developer": Object {
              "name": "Cozy",
              "url": "https://cozy.io",
            },
            "editor": "Cozy",
            "icon": "https://mockcozy.cc/registry/photos/icon",
            "installed": false,
            "langs": Array [
              "en",
              "fr",
            ],
            "licence": "AGPL-3.0",
            "locales": Object {
              "en": Object {
                "changes": "### NEW!!!

 Now on the cozy-store :tada",
                "long_description": "### Features

Enjoy features to grab your data in you Cozy :tada:",
                "short_description": "Gestionnaire de photos pour Cozy v3",
              },
              "fr": Object {
                "long_description": "### Photos

Gestionnaire de photos pour Cozy v3 :tada:",
                "short_description": "Gestionnaire de photos pour Cozy v3",
              },
            },
            "name": "Photos",
            "name_prefix": "Cozy",
            "permissions": Object {
              "albums": Object {
                "description": "Required to manage photos albums",
                "methods": Array [
                  "GET",
                  "POST",
                  "PUT",
                ],
                "type": "io.cozy.photos.albums",
              },
              "apps": Object {
                "description": "Required by the cozy-bar to display the icons of the apps",
                "type": "io.cozy.apps",
                "verbs": Array [
                  "GET",
                ],
              },
              "contacts": Object {
                "description": "Required to to share photos with your contacts",
                "methods": Array [
                  "GET",
                  "POST",
                ],
                "type": "io.cozy.contacts",
              },
              "files": Object {
                "description": "Required for photo access",
                "methods": Array [
                  "GET",
                  "POST",
                  "PUT",
                ],
                "type": "io.cozy.files",
              },
              "settings": Object {
                "description": "Required by the cozy-bar to display Claudy and know which applications are coming soon",
                "type": "io.cozy.settings",
                "verbs": Array [
                  "GET",
                ],
              },
            },
            "platforms": Array [
              Object {
                "type": "ios",
                "url": "",
              },
              Object {
                "type": "linux",
                "url": "",
              },
              Object {
                "type": "android",
                "url": "https://mock.app",
              },
            ],
            "related": null,
            "routes": Object {
              "/": Object {
                "folder": "/",
                "index": "index.html",
                "public": false,
              },
              "/public": Object {
                "folder": "/public",
                "index": "index.html",
                "public": true,
              },
            },
            "screenshots": Array [],
            "short_description": "Photos manager for Cozy v3",
            "slug": "photos",
            "source": "https://github.com/cozy/cozy-drive.git@build-photos",
            "type": "webapp",
            "version": "3.0.0",
          }
        }
        changes="### NEW!!!

 Now on the cozy-store :tada"
        description="### Features

Enjoy features to grab your data in you Cozy :tada:"
        mobileApps={
          Array [
            Object {
              "type": "ios",
              "url": "",
            },
            Object {
              "type": "android",
              "url": "https://mock.app",
            },
          ]
        }
        parent="/myapps"
      />
    </div>
  </div>
</FocusTrap>
`;

exports[`ApplicationPage component should be rendered correctly with app with screenshots 1`] = `
<FocusTrap
  _createFocusTrap={[Function]}
  active={true}
  focusTrapOptions={
    Object {
      "clickOutsideDeactivates": true,
      "onDeactivate": [Function],
    }
  }
  paused={false}
  tag="div"
>
  <div
    className="sto-modal-page-app"
  >
    <div
      className="sto-app"
    >
      <DefaultButton
        className="sto-app-back"
        icon="back"
        label="Back to the list"
        onClick={[Function]}
        subtle={true}
        tag={[Function]}
        to="/myapps"
      />
      <Connect(Aware)
        app={
          Object {
            "categories": Array [
              "cozy",
            ],
            "developer": Object {
              "name": "Cozy",
              "url": "https://cozy.io",
            },
            "editor": "Cozy",
            "icon": "https://mockcozy.cc/registry/photos/icon",
            "installed": false,
            "langs": Array [
              "en",
              "fr",
            ],
            "licence": "AGPL-3.0",
            "locales": Object {
              "en": Object {
                "changes": "### NEW!!!

 Now on the cozy-store :tada",
                "long_description": "### Features

Enjoy features to grab your data in you Cozy :tada:",
                "short_description": "Gestionnaire de photos pour Cozy v3",
              },
              "fr": Object {
                "long_description": "### Photos

Gestionnaire de photos pour Cozy v3 :tada:",
                "short_description": "Gestionnaire de photos pour Cozy v3",
              },
            },
            "name": "Photos",
            "name_prefix": "Cozy",
            "permissions": Object {
              "albums": Object {
                "description": "Required to manage photos albums",
                "methods": Array [
                  "GET",
                  "POST",
                  "PUT",
                ],
                "type": "io.cozy.photos.albums",
              },
              "apps": Object {
                "description": "Required by the cozy-bar to display the icons of the apps",
                "type": "io.cozy.apps",
                "verbs": Array [
                  "GET",
                ],
              },
              "contacts": Object {
                "description": "Required to to share photos with your contacts",
                "methods": Array [
                  "GET",
                  "POST",
                ],
                "type": "io.cozy.contacts",
              },
              "files": Object {
                "description": "Required for photo access",
                "methods": Array [
                  "GET",
                  "POST",
                  "PUT",
                ],
                "type": "io.cozy.files",
              },
              "settings": Object {
                "description": "Required by the cozy-bar to display Claudy and know which applications are coming soon",
                "type": "io.cozy.settings",
                "verbs": Array [
                  "GET",
                ],
              },
            },
            "platforms": Array [
              Object {
                "type": "ios",
                "url": "",
              },
              Object {
                "type": "linux",
                "url": "",
              },
              Object {
                "type": "android",
                "url": "https://mock.app",
              },
            ],
            "related": undefined,
            "routes": Object {
              "/": Object {
                "folder": "/",
                "index": "index.html",
                "public": false,
              },
              "/public": Object {
                "folder": "/public",
                "index": "index.html",
                "public": true,
              },
            },
            "screenshots": Array [
              "<svg></svg>",
            ],
            "short_description": "Photos manager for Cozy v3",
            "slug": "photos",
            "source": "https://github.com/cozy/cozy-drive.git@build-photos",
            "type": "webapp",
            "version": "3.0.0",
          }
        }
        description="Gestionnaire de photos pour Cozy v3"
        name="Photos"
        namePrefix="Cozy"
        parent="/myapps"
      />
      <Wrapper
        images={
          Array [
            "<svg></svg>",
          ]
        }
        slug="photos"
      />
      <Wrapped
        app={
          Object {
            "categories": Array [
              "cozy",
            ],
            "developer": Object {
              "name": "Cozy",
              "url": "https://cozy.io",
            },
            "editor": "Cozy",
            "icon": "https://mockcozy.cc/registry/photos/icon",
            "installed": false,
            "langs": Array [
              "en",
              "fr",
            ],
            "licence": "AGPL-3.0",
            "locales": Object {
              "en": Object {
                "changes": "### NEW!!!

 Now on the cozy-store :tada",
                "long_description": "### Features

Enjoy features to grab your data in you Cozy :tada:",
                "short_description": "Gestionnaire de photos pour Cozy v3",
              },
              "fr": Object {
                "long_description": "### Photos

Gestionnaire de photos pour Cozy v3 :tada:",
                "short_description": "Gestionnaire de photos pour Cozy v3",
              },
            },
            "name": "Photos",
            "name_prefix": "Cozy",
            "permissions": Object {
              "albums": Object {
                "description": "Required to manage photos albums",
                "methods": Array [
                  "GET",
                  "POST",
                  "PUT",
                ],
                "type": "io.cozy.photos.albums",
              },
              "apps": Object {
                "description": "Required by the cozy-bar to display the icons of the apps",
                "type": "io.cozy.apps",
                "verbs": Array [
                  "GET",
                ],
              },
              "contacts": Object {
                "description": "Required to to share photos with your contacts",
                "methods": Array [
                  "GET",
                  "POST",
                ],
                "type": "io.cozy.contacts",
              },
              "files": Object {
                "description": "Required for photo access",
                "methods": Array [
                  "GET",
                  "POST",
                  "PUT",
                ],
                "type": "io.cozy.files",
              },
              "settings": Object {
                "description": "Required by the cozy-bar to display Claudy and know which applications are coming soon",
                "type": "io.cozy.settings",
                "verbs": Array [
                  "GET",
                ],
              },
            },
            "platforms": Array [
              Object {
                "type": "ios",
                "url": "",
              },
              Object {
                "type": "linux",
                "url": "",
              },
              Object {
                "type": "android",
                "url": "https://mock.app",
              },
            ],
            "related": undefined,
            "routes": Object {
              "/": Object {
                "folder": "/",
                "index": "index.html",
                "public": false,
              },
              "/public": Object {
                "folder": "/public",
                "index": "index.html",
                "public": true,
              },
            },
            "screenshots": Array [
              "<svg></svg>",
            ],
            "short_description": "Photos manager for Cozy v3",
            "slug": "photos",
            "source": "https://github.com/cozy/cozy-drive.git@build-photos",
            "type": "webapp",
            "version": "3.0.0",
          }
        }
        changes="### NEW!!!

 Now on the cozy-store :tada"
        description="### Features

Enjoy features to grab your data in you Cozy :tada:"
        mobileApps={
          Array [
            Object {
              "type": "ios",
              "url": "",
            },
            Object {
              "type": "android",
              "url": "https://mock.app",
            },
          ]
        }
        parent="/myapps"
      />
    </div>
  </div>
</FocusTrap>
`;

exports[`ApplicationPage component should be rendered correctly with konnector infos from registry (not installed) 1`] = `
<FocusTrap
  _createFocusTrap={[Function]}
  active={true}
  focusTrapOptions={
    Object {
      "clickOutsideDeactivates": true,
      "onDeactivate": [Function],
    }
  }
  paused={false}
  tag="div"
>
  <div
    className="sto-modal-page-app"
  >
    <div
      className="sto-app"
    >
      <DefaultButton
        className="sto-app-back"
        icon="back"
        label="Back to the list"
        onClick={[Function]}
        subtle={true}
        tag={[Function]}
        to="/myapps"
      />
      <Connect(Aware)
        app={
          Object {
            "categories": Array [
              "transport",
            ],
            "dataType": Array [
              "bill",
            ],
            "developer": Object {
              "name": "Cozy",
              "url": "https://cozy.io",
            },
            "editor": "Cozy",
            "fields": Object {
              "advancedFields": Object {
                "folderPath": Object {
                  "advanced": true,
                  "isRequired": false,
                },
              },
              "login": Object {
                "type": "text",
              },
              "password": Object {
                "type": "password",
              },
            },
            "icon": "https://mockcozy.cc/registry/konnector-trinlane/icon",
            "installed": false,
            "langs": Array [
              "fr",
              "en",
            ],
            "locales": Object {
              "en": Object {
                "description": "Fetch all your trainline bills",
                "permissions": Object {
                  "accounts": Object {
                    "description": "Required to get the account's data",
                  },
                  "bank operations": Object {
                    "description": "Required to link bills to bank operations",
                  },
                  "bills": Object {
                    "description": "Required to save the bills data",
                  },
                  "files": Object {
                    "description": "Required to save the bills",
                  },
                },
              },
              "fr": Object {
                "description": "Récupère toutes vos factures Trainline",
                "permissions": Object {
                  "accounts": Object {
                    "description": "Utilisé pour obtenir les données du compte",
                  },
                  "bank operations": Object {
                    "description": "Utilisé pour lier vos factures à vos opérations banquaires",
                  },
                  "bills": Object {
                    "description": "Utilisé pour sauvegarder les données de facturation",
                  },
                  "files": Object {
                    "description": "Utilisé pour sauvegarder les factures",
                  },
                },
              },
            },
            "name": "Trinlane",
            "permissions": Object {
              "accounts": Object {
                "description": "Required to get the account's data",
                "type": "io.cozy.accounts",
                "verbs": Array [
                  "GET",
                ],
              },
              "bank operations": Object {
                "description": "Required to link bills to bank operations",
                "type": "io.cozy.bank.operations",
              },
              "bills": Object {
                "description": "Required to save the bills data",
                "type": "io.cozy.bills",
              },
              "files": Object {
                "description": "Required to save the bills",
                "type": "io.cozy.files",
              },
            },
            "short_description": "A konnector for trinlane",
            "slug": "konnector-trinlane",
            "source": "https://github.com/cozy/cozy-konnector-trinlane.git@build",
            "type": "konnector",
            "vendorLink": "www.trinlane.fr",
          }
        }
        description="A konnector for trinlane"
        name="Trinlane"
        namePrefix=""
        parent="/myapps"
      />
      <Wrapped
        app={
          Object {
            "categories": Array [
              "transport",
            ],
            "dataType": Array [
              "bill",
            ],
            "developer": Object {
              "name": "Cozy",
              "url": "https://cozy.io",
            },
            "editor": "Cozy",
            "fields": Object {
              "advancedFields": Object {
                "folderPath": Object {
                  "advanced": true,
                  "isRequired": false,
                },
              },
              "login": Object {
                "type": "text",
              },
              "password": Object {
                "type": "password",
              },
            },
            "icon": "https://mockcozy.cc/registry/konnector-trinlane/icon",
            "installed": false,
            "langs": Array [
              "fr",
              "en",
            ],
            "locales": Object {
              "en": Object {
                "description": "Fetch all your trainline bills",
                "permissions": Object {
                  "accounts": Object {
                    "description": "Required to get the account's data",
                  },
                  "bank operations": Object {
                    "description": "Required to link bills to bank operations",
                  },
                  "bills": Object {
                    "description": "Required to save the bills data",
                  },
                  "files": Object {
                    "description": "Required to save the bills",
                  },
                },
              },
              "fr": Object {
                "description": "Récupère toutes vos factures Trainline",
                "permissions": Object {
                  "accounts": Object {
                    "description": "Utilisé pour obtenir les données du compte",
                  },
                  "bank operations": Object {
                    "description": "Utilisé pour lier vos factures à vos opérations banquaires",
                  },
                  "bills": Object {
                    "description": "Utilisé pour sauvegarder les données de facturation",
                  },
                  "files": Object {
                    "description": "Utilisé pour sauvegarder les factures",
                  },
                },
              },
            },
            "name": "Trinlane",
            "permissions": Object {
              "accounts": Object {
                "description": "Required to get the account's data",
                "type": "io.cozy.accounts",
                "verbs": Array [
                  "GET",
                ],
              },
              "bank operations": Object {
                "description": "Required to link bills to bank operations",
                "type": "io.cozy.bank.operations",
              },
              "bills": Object {
                "description": "Required to save the bills data",
                "type": "io.cozy.bills",
              },
              "files": Object {
                "description": "Required to save the bills",
                "type": "io.cozy.files",
              },
            },
            "short_description": "A konnector for trinlane",
            "slug": "konnector-trinlane",
            "source": "https://github.com/cozy/cozy-konnector-trinlane.git@build",
            "type": "konnector",
            "vendorLink": "www.trinlane.fr",
          }
        }
        changes=""
        description=""
        parent="/myapps"
      />
    </div>
  </div>
</FocusTrap>
`;

exports[`ApplicationPage component should be rendered correctly with provided installed app 1`] = `
<FocusTrap
  _createFocusTrap={[Function]}
  active={true}
  focusTrapOptions={
    Object {
      "clickOutsideDeactivates": true,
      "onDeactivate": [Function],
    }
  }
  paused={false}
  tag="div"
>
  <div
    className="sto-modal-page-app"
  >
    <div
      className="sto-app"
    >
      <DefaultButton
        className="sto-app-back"
        icon="back"
        label="Back to the list"
        onClick={[Function]}
        subtle={true}
        tag={[Function]}
        to="/myapps"
      />
      <Connect(Aware)
        app={
          Object {
            "categories": Array [
              "cozy",
            ],
            "developer": Object {
              "name": "Cozy",
              "url": "https://cozy.io",
            },
            "editor": "Cozy",
            "icon": "https://mockcozy.cc/registry/photos/icon",
            "installed": true,
            "langs": Array [
              "en",
              "fr",
            ],
            "licence": "AGPL-3.0",
            "locales": Object {
              "en": Object {
                "changes": "### NEW!!!

 Now on the cozy-store :tada",
                "long_description": "### Features

Enjoy features to grab your data in you Cozy :tada:",
                "short_description": "Gestionnaire de photos pour Cozy v3",
              },
              "fr": Object {
                "long_description": "### Photos

Gestionnaire de photos pour Cozy v3 :tada:",
                "short_description": "Gestionnaire de photos pour Cozy v3",
              },
            },
            "name": "Photos",
            "name_prefix": "Cozy",
            "permissions": Object {
              "albums": Object {
                "description": "Required to manage photos albums",
                "methods": Array [
                  "GET",
                  "POST",
                  "PUT",
                ],
                "type": "io.cozy.photos.albums",
              },
              "apps": Object {
                "description": "Required by the cozy-bar to display the icons of the apps",
                "type": "io.cozy.apps",
                "verbs": Array [
                  "GET",
                ],
              },
              "contacts": Object {
                "description": "Required to to share photos with your contacts",
                "methods": Array [
                  "GET",
                  "POST",
                ],
                "type": "io.cozy.contacts",
              },
              "files": Object {
                "description": "Required for photo access",
                "methods": Array [
                  "GET",
                  "POST",
                  "PUT",
                ],
                "type": "io.cozy.files",
              },
              "settings": Object {
                "description": "Required by the cozy-bar to display Claudy and know which applications are coming soon",
                "type": "io.cozy.settings",
                "verbs": Array [
                  "GET",
                ],
              },
            },
            "platforms": Array [
              Object {
                "type": "ios",
                "url": "",
              },
              Object {
                "type": "linux",
                "url": "",
              },
              Object {
                "type": "android",
                "url": "https://mock.app",
              },
            ],
            "related": "https://photos.mockcozy.cc",
            "routes": Object {
              "/": Object {
                "folder": "/",
                "index": "index.html",
                "public": false,
              },
              "/public": Object {
                "folder": "/public",
                "index": "index.html",
                "public": true,
              },
            },
            "screenshots": Array [],
            "short_description": "Photos manager for Cozy v3",
            "slug": "photos",
            "source": "https://github.com/cozy/cozy-drive.git@build-photos",
            "type": "webapp",
            "version": "3.0.0",
          }
        }
        description="Gestionnaire de photos pour Cozy v3"
        name="Photos"
        namePrefix="Cozy"
        parent="/myapps"
      />
      <Wrapped
        app={
          Object {
            "categories": Array [
              "cozy",
            ],
            "developer": Object {
              "name": "Cozy",
              "url": "https://cozy.io",
            },
            "editor": "Cozy",
            "icon": "https://mockcozy.cc/registry/photos/icon",
            "installed": true,
            "langs": Array [
              "en",
              "fr",
            ],
            "licence": "AGPL-3.0",
            "locales": Object {
              "en": Object {
                "changes": "### NEW!!!

 Now on the cozy-store :tada",
                "long_description": "### Features

Enjoy features to grab your data in you Cozy :tada:",
                "short_description": "Gestionnaire de photos pour Cozy v3",
              },
              "fr": Object {
                "long_description": "### Photos

Gestionnaire de photos pour Cozy v3 :tada:",
                "short_description": "Gestionnaire de photos pour Cozy v3",
              },
            },
            "name": "Photos",
            "name_prefix": "Cozy",
            "permissions": Object {
              "albums": Object {
                "description": "Required to manage photos albums",
                "methods": Array [
                  "GET",
                  "POST",
                  "PUT",
                ],
                "type": "io.cozy.photos.albums",
              },
              "apps": Object {
                "description": "Required by the cozy-bar to display the icons of the apps",
                "type": "io.cozy.apps",
                "verbs": Array [
                  "GET",
                ],
              },
              "contacts": Object {
                "description": "Required to to share photos with your contacts",
                "methods": Array [
                  "GET",
                  "POST",
                ],
                "type": "io.cozy.contacts",
              },
              "files": Object {
                "description": "Required for photo access",
                "methods": Array [
                  "GET",
                  "POST",
                  "PUT",
                ],
                "type": "io.cozy.files",
              },
              "settings": Object {
                "description": "Required by the cozy-bar to display Claudy and know which applications are coming soon",
                "type": "io.cozy.settings",
                "verbs": Array [
                  "GET",
                ],
              },
            },
            "platforms": Array [
              Object {
                "type": "ios",
                "url": "",
              },
              Object {
                "type": "linux",
                "url": "",
              },
              Object {
                "type": "android",
                "url": "https://mock.app",
              },
            ],
            "related": "https://photos.mockcozy.cc",
            "routes": Object {
              "/": Object {
                "folder": "/",
                "index": "index.html",
                "public": false,
              },
              "/public": Object {
                "folder": "/public",
                "index": "index.html",
                "public": true,
              },
            },
            "screenshots": Array [],
            "short_description": "Photos manager for Cozy v3",
            "slug": "photos",
            "source": "https://github.com/cozy/cozy-drive.git@build-photos",
            "type": "webapp",
            "version": "3.0.0",
          }
        }
        changes="### NEW!!!

 Now on the cozy-store :tada"
        description="### Features

Enjoy features to grab your data in you Cozy :tada:"
        mobileApps={
          Array [
            Object {
              "type": "ios",
              "url": "",
            },
            Object {
              "type": "android",
              "url": "https://mock.app",
            },
          ]
        }
        parent="/myapps"
      />
    </div>
  </div>
</FocusTrap>
`;

exports[`ApplicationPage component should be rendered correctly with provided installed konnector 1`] = `
<FocusTrap
  _createFocusTrap={[Function]}
  active={true}
  focusTrapOptions={
    Object {
      "clickOutsideDeactivates": true,
      "onDeactivate": [Function],
    }
  }
  paused={false}
  tag="div"
>
  <div
    className="sto-modal-page-app"
  >
    <div
      className="sto-app"
    >
      <DefaultButton
        className="sto-app-back"
        icon="back"
        label="Back to the list"
        onClick={[Function]}
        subtle={true}
        tag={[Function]}
        to="/myapps"
      />
      <Connect(Aware)
        app={
          Object {
            "categories": Array [
              "transport",
            ],
            "dataType": Array [
              "bill",
            ],
            "developer": Object {
              "name": "Cozy",
              "url": "https://cozy.io",
            },
            "editor": "Cozy",
            "fields": Object {
              "advancedFields": Object {
                "folderPath": Object {
                  "advanced": true,
                  "isRequired": false,
                },
              },
              "login": Object {
                "type": "text",
              },
              "password": Object {
                "type": "password",
              },
            },
            "icon": "https://mockcozy.cc/registry/konnector-trinlane/icon",
            "installed": true,
            "langs": Array [
              "fr",
              "en",
            ],
            "locales": Object {
              "en": Object {
                "description": "Fetch all your trainline bills",
                "permissions": Object {
                  "accounts": Object {
                    "description": "Required to get the account's data",
                  },
                  "bank operations": Object {
                    "description": "Required to link bills to bank operations",
                  },
                  "bills": Object {
                    "description": "Required to save the bills data",
                  },
                  "files": Object {
                    "description": "Required to save the bills",
                  },
                },
              },
              "fr": Object {
                "description": "Récupère toutes vos factures Trainline",
                "permissions": Object {
                  "accounts": Object {
                    "description": "Utilisé pour obtenir les données du compte",
                  },
                  "bank operations": Object {
                    "description": "Utilisé pour lier vos factures à vos opérations banquaires",
                  },
                  "bills": Object {
                    "description": "Utilisé pour sauvegarder les données de facturation",
                  },
                  "files": Object {
                    "description": "Utilisé pour sauvegarder les factures",
                  },
                },
              },
            },
            "name": "Trinlane",
            "permissions": Object {
              "accounts": Object {
                "description": "Required to get the account's data",
                "type": "io.cozy.accounts",
                "verbs": Array [
                  "GET",
                ],
              },
              "bank operations": Object {
                "description": "Required to link bills to bank operations",
                "type": "io.cozy.bank.operations",
              },
              "bills": Object {
                "description": "Required to save the bills data",
                "type": "io.cozy.bills",
              },
              "files": Object {
                "description": "Required to save the bills",
                "type": "io.cozy.files",
              },
            },
            "short_description": "A konnector for trinlane",
            "slug": "konnector-trinlane",
            "source": "https://github.com/cozy/cozy-konnector-trinlane.git@build",
            "type": "konnector",
            "vendorLink": "www.trinlane.fr",
          }
        }
        description="A konnector for trinlane"
        name="Trinlane"
        namePrefix=""
        parent="/myapps"
      />
      <Wrapped
        app={
          Object {
            "categories": Array [
              "transport",
            ],
            "dataType": Array [
              "bill",
            ],
            "developer": Object {
              "name": "Cozy",
              "url": "https://cozy.io",
            },
            "editor": "Cozy",
            "fields": Object {
              "advancedFields": Object {
                "folderPath": Object {
                  "advanced": true,
                  "isRequired": false,
                },
              },
              "login": Object {
                "type": "text",
              },
              "password": Object {
                "type": "password",
              },
            },
            "icon": "https://mockcozy.cc/registry/konnector-trinlane/icon",
            "installed": true,
            "langs": Array [
              "fr",
              "en",
            ],
            "locales": Object {
              "en": Object {
                "description": "Fetch all your trainline bills",
                "permissions": Object {
                  "accounts": Object {
                    "description": "Required to get the account's data",
                  },
                  "bank operations": Object {
                    "description": "Required to link bills to bank operations",
                  },
                  "bills": Object {
                    "description": "Required to save the bills data",
                  },
                  "files": Object {
                    "description": "Required to save the bills",
                  },
                },
              },
              "fr": Object {
                "description": "Récupère toutes vos factures Trainline",
                "permissions": Object {
                  "accounts": Object {
                    "description": "Utilisé pour obtenir les données du compte",
                  },
                  "bank operations": Object {
                    "description": "Utilisé pour lier vos factures à vos opérations banquaires",
                  },
                  "bills": Object {
                    "description": "Utilisé pour sauvegarder les données de facturation",
                  },
                  "files": Object {
                    "description": "Utilisé pour sauvegarder les factures",
                  },
                },
              },
            },
            "name": "Trinlane",
            "permissions": Object {
              "accounts": Object {
                "description": "Required to get the account's data",
                "type": "io.cozy.accounts",
                "verbs": Array [
                  "GET",
                ],
              },
              "bank operations": Object {
                "description": "Required to link bills to bank operations",
                "type": "io.cozy.bank.operations",
              },
              "bills": Object {
                "description": "Required to save the bills data",
                "type": "io.cozy.bills",
              },
              "files": Object {
                "description": "Required to save the bills",
                "type": "io.cozy.files",
              },
            },
            "short_description": "A konnector for trinlane",
            "slug": "konnector-trinlane",
            "source": "https://github.com/cozy/cozy-konnector-trinlane.git@build",
            "type": "konnector",
            "vendorLink": "www.trinlane.fr",
          }
        }
        changes=""
        description=""
        parent="/myapps"
      />
    </div>
  </div>
</FocusTrap>
`;

exports[`ApplicationPage component should be rendered correctly without app descriptions 1`] = `
<FocusTrap
  _createFocusTrap={[Function]}
  active={true}
  focusTrapOptions={
    Object {
      "clickOutsideDeactivates": true,
      "onDeactivate": [Function],
    }
  }
  paused={false}
  tag="div"
>
  <div
    className="sto-modal-page-app"
  >
    <div
      className="sto-app"
    >
      <DefaultButton
        className="sto-app-back"
        icon="back"
        label="Back to the list"
        onClick={[Function]}
        subtle={true}
        tag={[Function]}
        to="/myapps"
      />
      <Connect(Aware)
        app={
          Object {
            "categories": Array [
              "transport",
            ],
            "dataType": Array [
              "bill",
            ],
            "developer": Object {
              "name": "Cozy",
              "url": "https://cozy.io",
            },
            "editor": "Cozy",
            "fields": Object {
              "advancedFields": Object {
                "folderPath": Object {
                  "advanced": true,
                  "isRequired": false,
                },
              },
              "login": Object {
                "type": "text",
              },
              "password": Object {
                "type": "password",
              },
            },
            "icon": "https://mockcozy.cc/registry/konnector-trinlane/icon",
            "installed": false,
            "langs": Array [
              "fr",
              "en",
            ],
            "locales": Object {
              "en": Object {
                "description": "Fetch all your trainline bills",
                "permissions": Object {
                  "accounts": Object {
                    "description": "Required to get the account's data",
                  },
                  "bank operations": Object {
                    "description": "Required to link bills to bank operations",
                  },
                  "bills": Object {
                    "description": "Required to save the bills data",
                  },
                  "files": Object {
                    "description": "Required to save the bills",
                  },
                },
              },
              "fr": Object {
                "description": "Récupère toutes vos factures Trainline",
                "permissions": Object {
                  "accounts": Object {
                    "description": "Utilisé pour obtenir les données du compte",
                  },
                  "bank operations": Object {
                    "description": "Utilisé pour lier vos factures à vos opérations banquaires",
                  },
                  "bills": Object {
                    "description": "Utilisé pour sauvegarder les données de facturation",
                  },
                  "files": Object {
                    "description": "Utilisé pour sauvegarder les factures",
                  },
                },
              },
            },
            "name": "Trinlane",
            "permissions": Object {
              "accounts": Object {
                "description": "Required to get the account's data",
                "type": "io.cozy.accounts",
                "verbs": Array [
                  "GET",
                ],
              },
              "bank operations": Object {
                "description": "Required to link bills to bank operations",
                "type": "io.cozy.bank.operations",
              },
              "bills": Object {
                "description": "Required to save the bills data",
                "type": "io.cozy.bills",
              },
              "files": Object {
                "description": "Required to save the bills",
                "type": "io.cozy.files",
              },
            },
            "slug": "konnector-trinlane",
            "source": "https://github.com/cozy/cozy-konnector-trinlane.git@build",
            "type": "konnector",
            "vendorLink": "www.trinlane.fr",
          }
        }
        description=""
        name="Trinlane"
        namePrefix=""
        parent="/myapps"
      />
      <Wrapped
        app={
          Object {
            "categories": Array [
              "transport",
            ],
            "dataType": Array [
              "bill",
            ],
            "developer": Object {
              "name": "Cozy",
              "url": "https://cozy.io",
            },
            "editor": "Cozy",
            "fields": Object {
              "advancedFields": Object {
                "folderPath": Object {
                  "advanced": true,
                  "isRequired": false,
                },
              },
              "login": Object {
                "type": "text",
              },
              "password": Object {
                "type": "password",
              },
            },
            "icon": "https://mockcozy.cc/registry/konnector-trinlane/icon",
            "installed": false,
            "langs": Array [
              "fr",
              "en",
            ],
            "locales": Object {
              "en": Object {
                "description": "Fetch all your trainline bills",
                "permissions": Object {
                  "accounts": Object {
                    "description": "Required to get the account's data",
                  },
                  "bank operations": Object {
                    "description": "Required to link bills to bank operations",
                  },
                  "bills": Object {
                    "description": "Required to save the bills data",
                  },
                  "files": Object {
                    "description": "Required to save the bills",
                  },
                },
              },
              "fr": Object {
                "description": "Récupère toutes vos factures Trainline",
                "permissions": Object {
                  "accounts": Object {
                    "description": "Utilisé pour obtenir les données du compte",
                  },
                  "bank operations": Object {
                    "description": "Utilisé pour lier vos factures à vos opérations banquaires",
                  },
                  "bills": Object {
                    "description": "Utilisé pour sauvegarder les données de facturation",
                  },
                  "files": Object {
                    "description": "Utilisé pour sauvegarder les factures",
                  },
                },
              },
            },
            "name": "Trinlane",
            "permissions": Object {
              "accounts": Object {
                "description": "Required to get the account's data",
                "type": "io.cozy.accounts",
                "verbs": Array [
                  "GET",
                ],
              },
              "bank operations": Object {
                "description": "Required to link bills to bank operations",
                "type": "io.cozy.bank.operations",
              },
              "bills": Object {
                "description": "Required to save the bills data",
                "type": "io.cozy.bills",
              },
              "files": Object {
                "description": "Required to save the bills",
                "type": "io.cozy.files",
              },
            },
            "slug": "konnector-trinlane",
            "source": "https://github.com/cozy/cozy-konnector-trinlane.git@build",
            "type": "konnector",
            "vendorLink": "www.trinlane.fr",
          }
        }
        changes=""
        description=""
        parent="/myapps"
      />
    </div>
  </div>
</FocusTrap>
`;

exports[`ApplicationPage component should render correctly an error message if fetchError 1`] = `
<p
  className="u-error"
>
  Something went wrong when fetching the application informations. Reason: This is a test error
</p>
`;

exports[`ApplicationPage component should render correctly on mobile with the scroll feature 1`] = `
<FocusTrap
  _createFocusTrap={[Function]}
  active={true}
  focusTrapOptions={
    Object {
      "clickOutsideDeactivates": true,
      "onDeactivate": [Function],
    }
  }
  paused={false}
  tag="div"
>
  <div
    className="sto-modal-page-app"
  >
    <BarCenter>
      <div
        className="sto-app-bar"
      >
        <AppIcon
          app={
            Object {
              "categories": Array [
                "cozy",
              ],
              "developer": Object {
                "name": "Cozy",
                "url": "https://cozy.io",
              },
              "editor": "Cozy",
              "icon": "https://mockcozy.cc/registry/photos/icon",
              "installed": false,
              "langs": Array [
                "en",
                "fr",
              ],
              "licence": "AGPL-3.0",
              "locales": Object {
                "en": Object {
                  "changes": "### NEW!!!

 Now on the cozy-store :tada",
                  "long_description": "### Features

Enjoy features to grab your data in you Cozy :tada:",
                  "short_description": "Gestionnaire de photos pour Cozy v3",
                },
                "fr": Object {
                  "long_description": "### Photos

Gestionnaire de photos pour Cozy v3 :tada:",
                  "short_description": "Gestionnaire de photos pour Cozy v3",
                },
              },
              "name": "Photos",
              "name_prefix": "Cozy",
              "permissions": Object {
                "albums": Object {
                  "description": "Required to manage photos albums",
                  "methods": Array [
                    "GET",
                    "POST",
                    "PUT",
                  ],
                  "type": "io.cozy.photos.albums",
                },
                "apps": Object {
                  "description": "Required by the cozy-bar to display the icons of the apps",
                  "type": "io.cozy.apps",
                  "verbs": Array [
                    "GET",
                  ],
                },
                "contacts": Object {
                  "description": "Required to to share photos with your contacts",
                  "methods": Array [
                    "GET",
                    "POST",
                  ],
                  "type": "io.cozy.contacts",
                },
                "files": Object {
                  "description": "Required for photo access",
                  "methods": Array [
                    "GET",
                    "POST",
                    "PUT",
                  ],
                  "type": "io.cozy.files",
                },
                "settings": Object {
                  "description": "Required by the cozy-bar to display Claudy and know which applications are coming soon",
                  "type": "io.cozy.settings",
                  "verbs": Array [
                    "GET",
                  ],
                },
              },
              "platforms": Array [
                Object {
                  "type": "ios",
                  "url": "",
                },
                Object {
                  "type": "linux",
                  "url": "",
                },
                Object {
                  "type": "android",
                  "url": "https://mock.app",
                },
              ],
              "related": null,
              "routes": Object {
                "/": Object {
                  "folder": "/",
                  "index": "index.html",
                  "public": false,
                },
                "/public": Object {
                  "folder": "/public",
                  "index": "index.html",
                  "public": true,
                },
              },
              "screenshots": Array [],
              "short_description": "Photos manager for Cozy v3",
              "slug": "photos",
              "source": "https://github.com/cozy/cozy-drive.git@build-photos",
              "type": "webapp",
              "version": "3.0.0",
            }
          }
          className="sto-app-bar-icon sto-app-bar-icon--hidden"
          domain={null}
          secure={false}
        />
      </div>
    </BarCenter>
    <div
      className="sto-app"
    >
      <DefaultButton
        className="sto-app-back"
        icon="back"
        label="Back to the list"
        onClick={[Function]}
        subtle={true}
        tag={[Function]}
        to="/myapps"
      />
      <Connect(Aware)
        app={
          Object {
            "categories": Array [
              "cozy",
            ],
            "developer": Object {
              "name": "Cozy",
              "url": "https://cozy.io",
            },
            "editor": "Cozy",
            "icon": "https://mockcozy.cc/registry/photos/icon",
            "installed": false,
            "langs": Array [
              "en",
              "fr",
            ],
            "licence": "AGPL-3.0",
            "locales": Object {
              "en": Object {
                "changes": "### NEW!!!

 Now on the cozy-store :tada",
                "long_description": "### Features

Enjoy features to grab your data in you Cozy :tada:",
                "short_description": "Gestionnaire de photos pour Cozy v3",
              },
              "fr": Object {
                "long_description": "### Photos

Gestionnaire de photos pour Cozy v3 :tada:",
                "short_description": "Gestionnaire de photos pour Cozy v3",
              },
            },
            "name": "Photos",
            "name_prefix": "Cozy",
            "permissions": Object {
              "albums": Object {
                "description": "Required to manage photos albums",
                "methods": Array [
                  "GET",
                  "POST",
                  "PUT",
                ],
                "type": "io.cozy.photos.albums",
              },
              "apps": Object {
                "description": "Required by the cozy-bar to display the icons of the apps",
                "type": "io.cozy.apps",
                "verbs": Array [
                  "GET",
                ],
              },
              "contacts": Object {
                "description": "Required to to share photos with your contacts",
                "methods": Array [
                  "GET",
                  "POST",
                ],
                "type": "io.cozy.contacts",
              },
              "files": Object {
                "description": "Required for photo access",
                "methods": Array [
                  "GET",
                  "POST",
                  "PUT",
                ],
                "type": "io.cozy.files",
              },
              "settings": Object {
                "description": "Required by the cozy-bar to display Claudy and know which applications are coming soon",
                "type": "io.cozy.settings",
                "verbs": Array [
                  "GET",
                ],
              },
            },
            "platforms": Array [
              Object {
                "type": "ios",
                "url": "",
              },
              Object {
                "type": "linux",
                "url": "",
              },
              Object {
                "type": "android",
                "url": "https://mock.app",
              },
            ],
            "related": null,
            "routes": Object {
              "/": Object {
                "folder": "/",
                "index": "index.html",
                "public": false,
              },
              "/public": Object {
                "folder": "/public",
                "index": "index.html",
                "public": true,
              },
            },
            "screenshots": Array [],
            "short_description": "Photos manager for Cozy v3",
            "slug": "photos",
            "source": "https://github.com/cozy/cozy-drive.git@build-photos",
            "type": "webapp",
            "version": "3.0.0",
          }
        }
        description="Gestionnaire de photos pour Cozy v3"
        name="Photos"
        namePrefix="Cozy"
        parent="/myapps"
      />
      <Wrapped
        app={
          Object {
            "categories": Array [
              "cozy",
            ],
            "developer": Object {
              "name": "Cozy",
              "url": "https://cozy.io",
            },
            "editor": "Cozy",
            "icon": "https://mockcozy.cc/registry/photos/icon",
            "installed": false,
            "langs": Array [
              "en",
              "fr",
            ],
            "licence": "AGPL-3.0",
            "locales": Object {
              "en": Object {
                "changes": "### NEW!!!

 Now on the cozy-store :tada",
                "long_description": "### Features

Enjoy features to grab your data in you Cozy :tada:",
                "short_description": "Gestionnaire de photos pour Cozy v3",
              },
              "fr": Object {
                "long_description": "### Photos

Gestionnaire de photos pour Cozy v3 :tada:",
                "short_description": "Gestionnaire de photos pour Cozy v3",
              },
            },
            "name": "Photos",
            "name_prefix": "Cozy",
            "permissions": Object {
              "albums": Object {
                "description": "Required to manage photos albums",
                "methods": Array [
                  "GET",
                  "POST",
                  "PUT",
                ],
                "type": "io.cozy.photos.albums",
              },
              "apps": Object {
                "description": "Required by the cozy-bar to display the icons of the apps",
                "type": "io.cozy.apps",
                "verbs": Array [
                  "GET",
                ],
              },
              "contacts": Object {
                "description": "Required to to share photos with your contacts",
                "methods": Array [
                  "GET",
                  "POST",
                ],
                "type": "io.cozy.contacts",
              },
              "files": Object {
                "description": "Required for photo access",
                "methods": Array [
                  "GET",
                  "POST",
                  "PUT",
                ],
                "type": "io.cozy.files",
              },
              "settings": Object {
                "description": "Required by the cozy-bar to display Claudy and know which applications are coming soon",
                "type": "io.cozy.settings",
                "verbs": Array [
                  "GET",
                ],
              },
            },
            "platforms": Array [
              Object {
                "type": "ios",
                "url": "",
              },
              Object {
                "type": "linux",
                "url": "",
              },
              Object {
                "type": "android",
                "url": "https://mock.app",
              },
            ],
            "related": null,
            "routes": Object {
              "/": Object {
                "folder": "/",
                "index": "index.html",
                "public": false,
              },
              "/public": Object {
                "folder": "/public",
                "index": "index.html",
                "public": true,
              },
            },
            "screenshots": Array [],
            "short_description": "Photos manager for Cozy v3",
            "slug": "photos",
            "source": "https://github.com/cozy/cozy-drive.git@build-photos",
            "type": "webapp",
            "version": "3.0.0",
          }
        }
        changes="### NEW!!!

 Now on the cozy-store :tada"
        description="### Features

Enjoy features to grab your data in you Cozy :tada:"
        mobileApps={
          Array [
            Object {
              "type": "ios",
              "url": "",
            },
            Object {
              "type": "android",
              "url": "https://mock.app",
            },
          ]
        }
        parent="/myapps"
      />
    </div>
  </div>
</FocusTrap>
`;

exports[`ApplicationPage component should render correctly on mobile with the scroll feature 2`] = `
<FocusTrap
  _createFocusTrap={[Function]}
  active={true}
  focusTrapOptions={
    Object {
      "clickOutsideDeactivates": true,
      "onDeactivate": [Function],
    }
  }
  paused={false}
  tag="div"
>
  <div
    className="sto-modal-page-app"
  >
    <BarCenter>
      <div
        className="sto-app-bar"
      >
        <AppIcon
          app={
            Object {
              "categories": Array [
                "cozy",
              ],
              "developer": Object {
                "name": "Cozy",
                "url": "https://cozy.io",
              },
              "editor": "Cozy",
              "icon": "https://mockcozy.cc/registry/photos/icon",
              "installed": false,
              "langs": Array [
                "en",
                "fr",
              ],
              "licence": "AGPL-3.0",
              "locales": Object {
                "en": Object {
                  "changes": "### NEW!!!

 Now on the cozy-store :tada",
                  "long_description": "### Features

Enjoy features to grab your data in you Cozy :tada:",
                  "short_description": "Gestionnaire de photos pour Cozy v3",
                },
                "fr": Object {
                  "long_description": "### Photos

Gestionnaire de photos pour Cozy v3 :tada:",
                  "short_description": "Gestionnaire de photos pour Cozy v3",
                },
              },
              "name": "Photos",
              "name_prefix": "Cozy",
              "permissions": Object {
                "albums": Object {
                  "description": "Required to manage photos albums",
                  "methods": Array [
                    "GET",
                    "POST",
                    "PUT",
                  ],
                  "type": "io.cozy.photos.albums",
                },
                "apps": Object {
                  "description": "Required by the cozy-bar to display the icons of the apps",
                  "type": "io.cozy.apps",
                  "verbs": Array [
                    "GET",
                  ],
                },
                "contacts": Object {
                  "description": "Required to to share photos with your contacts",
                  "methods": Array [
                    "GET",
                    "POST",
                  ],
                  "type": "io.cozy.contacts",
                },
                "files": Object {
                  "description": "Required for photo access",
                  "methods": Array [
                    "GET",
                    "POST",
                    "PUT",
                  ],
                  "type": "io.cozy.files",
                },
                "settings": Object {
                  "description": "Required by the cozy-bar to display Claudy and know which applications are coming soon",
                  "type": "io.cozy.settings",
                  "verbs": Array [
                    "GET",
                  ],
                },
              },
              "platforms": Array [
                Object {
                  "type": "ios",
                  "url": "",
                },
                Object {
                  "type": "linux",
                  "url": "",
                },
                Object {
                  "type": "android",
                  "url": "https://mock.app",
                },
              ],
              "related": null,
              "routes": Object {
                "/": Object {
                  "folder": "/",
                  "index": "index.html",
                  "public": false,
                },
                "/public": Object {
                  "folder": "/public",
                  "index": "index.html",
                  "public": true,
                },
              },
              "screenshots": Array [],
              "short_description": "Photos manager for Cozy v3",
              "slug": "photos",
              "source": "https://github.com/cozy/cozy-drive.git@build-photos",
              "type": "webapp",
              "version": "3.0.0",
            }
          }
          className="sto-app-bar-icon sto-app-bar-icon--hidden"
          domain={null}
          secure={false}
        />
      </div>
    </BarCenter>
    <div
      className="sto-app"
    >
      <DefaultButton
        className="sto-app-back"
        icon="back"
        label="Back to the list"
        onClick={[Function]}
        subtle={true}
        tag={[Function]}
        to="/myapps"
      />
      <Connect(Aware)
        app={
          Object {
            "categories": Array [
              "cozy",
            ],
            "developer": Object {
              "name": "Cozy",
              "url": "https://cozy.io",
            },
            "editor": "Cozy",
            "icon": "https://mockcozy.cc/registry/photos/icon",
            "installed": false,
            "langs": Array [
              "en",
              "fr",
            ],
            "licence": "AGPL-3.0",
            "locales": Object {
              "en": Object {
                "changes": "### NEW!!!

 Now on the cozy-store :tada",
                "long_description": "### Features

Enjoy features to grab your data in you Cozy :tada:",
                "short_description": "Gestionnaire de photos pour Cozy v3",
              },
              "fr": Object {
                "long_description": "### Photos

Gestionnaire de photos pour Cozy v3 :tada:",
                "short_description": "Gestionnaire de photos pour Cozy v3",
              },
            },
            "name": "Photos",
            "name_prefix": "Cozy",
            "permissions": Object {
              "albums": Object {
                "description": "Required to manage photos albums",
                "methods": Array [
                  "GET",
                  "POST",
                  "PUT",
                ],
                "type": "io.cozy.photos.albums",
              },
              "apps": Object {
                "description": "Required by the cozy-bar to display the icons of the apps",
                "type": "io.cozy.apps",
                "verbs": Array [
                  "GET",
                ],
              },
              "contacts": Object {
                "description": "Required to to share photos with your contacts",
                "methods": Array [
                  "GET",
                  "POST",
                ],
                "type": "io.cozy.contacts",
              },
              "files": Object {
                "description": "Required for photo access",
                "methods": Array [
                  "GET",
                  "POST",
                  "PUT",
                ],
                "type": "io.cozy.files",
              },
              "settings": Object {
                "description": "Required by the cozy-bar to display Claudy and know which applications are coming soon",
                "type": "io.cozy.settings",
                "verbs": Array [
                  "GET",
                ],
              },
            },
            "platforms": Array [
              Object {
                "type": "ios",
                "url": "",
              },
              Object {
                "type": "linux",
                "url": "",
              },
              Object {
                "type": "android",
                "url": "https://mock.app",
              },
            ],
            "related": null,
            "routes": Object {
              "/": Object {
                "folder": "/",
                "index": "index.html",
                "public": false,
              },
              "/public": Object {
                "folder": "/public",
                "index": "index.html",
                "public": true,
              },
            },
            "screenshots": Array [],
            "short_description": "Photos manager for Cozy v3",
            "slug": "photos",
            "source": "https://github.com/cozy/cozy-drive.git@build-photos",
            "type": "webapp",
            "version": "3.0.0",
          }
        }
        description="Gestionnaire de photos pour Cozy v3"
        name="Photos"
        namePrefix="Cozy"
        parent="/myapps"
      />
      <Wrapped
        app={
          Object {
            "categories": Array [
              "cozy",
            ],
            "developer": Object {
              "name": "Cozy",
              "url": "https://cozy.io",
            },
            "editor": "Cozy",
            "icon": "https://mockcozy.cc/registry/photos/icon",
            "installed": false,
            "langs": Array [
              "en",
              "fr",
            ],
            "licence": "AGPL-3.0",
            "locales": Object {
              "en": Object {
                "changes": "### NEW!!!

 Now on the cozy-store :tada",
                "long_description": "### Features

Enjoy features to grab your data in you Cozy :tada:",
                "short_description": "Gestionnaire de photos pour Cozy v3",
              },
              "fr": Object {
                "long_description": "### Photos

Gestionnaire de photos pour Cozy v3 :tada:",
                "short_description": "Gestionnaire de photos pour Cozy v3",
              },
            },
            "name": "Photos",
            "name_prefix": "Cozy",
            "permissions": Object {
              "albums": Object {
                "description": "Required to manage photos albums",
                "methods": Array [
                  "GET",
                  "POST",
                  "PUT",
                ],
                "type": "io.cozy.photos.albums",
              },
              "apps": Object {
                "description": "Required by the cozy-bar to display the icons of the apps",
                "type": "io.cozy.apps",
                "verbs": Array [
                  "GET",
                ],
              },
              "contacts": Object {
                "description": "Required to to share photos with your contacts",
                "methods": Array [
                  "GET",
                  "POST",
                ],
                "type": "io.cozy.contacts",
              },
              "files": Object {
                "description": "Required for photo access",
                "methods": Array [
                  "GET",
                  "POST",
                  "PUT",
                ],
                "type": "io.cozy.files",
              },
              "settings": Object {
                "description": "Required by the cozy-bar to display Claudy and know which applications are coming soon",
                "type": "io.cozy.settings",
                "verbs": Array [
                  "GET",
                ],
              },
            },
            "platforms": Array [
              Object {
                "type": "ios",
                "url": "",
              },
              Object {
                "type": "linux",
                "url": "",
              },
              Object {
                "type": "android",
                "url": "https://mock.app",
              },
            ],
            "related": null,
            "routes": Object {
              "/": Object {
                "folder": "/",
                "index": "index.html",
                "public": false,
              },
              "/public": Object {
                "folder": "/public",
                "index": "index.html",
                "public": true,
              },
            },
            "screenshots": Array [],
            "short_description": "Photos manager for Cozy v3",
            "slug": "photos",
            "source": "https://github.com/cozy/cozy-drive.git@build-photos",
            "type": "webapp",
            "version": "3.0.0",
          }
        }
        changes="### NEW!!!

 Now on the cozy-store :tada"
        description="### Features

Enjoy features to grab your data in you Cozy :tada:"
        mobileApps={
          Array [
            Object {
              "type": "ios",
              "url": "",
            },
            Object {
              "type": "android",
              "url": "https://mock.app",
            },
          ]
        }
        parent="/myapps"
      />
    </div>
  </div>
</FocusTrap>
`;

exports[`ApplicationPage component should render correctly the application page loading if isFetching 1`] = `
<div
  className="sto-modal-page-app app-page-loading --loading"
>
  <div
    className="sto-app"
  >
    <Placeholder
      className="text-placeholder"
      width="9rem"
    />
    <a
      className="sto-app-back"
      href="#/discover/discover"
    />
    <div
      className="sto-app-header"
    >
      <div
        className="sto-app-header-icon"
      >
        <Placeholder
          height="7rem"
          width="8rem"
        />
      </div>
      <div
        className="sto-app-header-content grp-placeholder"
      >
        <h2
          className="sto-app-header-title"
        >
          <Placeholder
            className="text-placeholder"
            width="12rem"
          />
        </h2>
        <Placeholder
          className="text-placeholder"
          width="40rem"
        />
        <Placeholder
          className="text-placeholder"
          width="30rem"
        />
        <Placeholder
          className="text-placeholder"
          width="18rem"
        />
      </div>
    </div>
    <div
      className="sto-app-images"
    >
      <div
        className="sto-app-big-images"
      >
        <Placeholder
          height="100%"
          width="100%"
        />
        <Placeholder
          height="100%"
          width="100%"
        />
      </div>
      <div
        className="sto-app-small-images"
      >
        <Placeholder
          height="6vw"
          width="100%"
        />
        <Placeholder
          height="6vw"
          width="100%"
        />
        <Placeholder
          height="6vw"
          width="100%"
        />
      </div>
    </div>
    <div
      className="sto-app-details"
    >
      <div
        className="sto-app-descriptions"
      >
        <div
          className="sto-app-description"
        >
          <div>
            <p
              className="grp-placeholder"
            >
              <Placeholder
                className="text-placeholder"
                width="15rem"
              />
              <Placeholder
                className="text-placeholder"
                width="100%"
              />
              <Placeholder
                className="text-placeholder"
                width="100%"
              />
              <Placeholder
                className="text-placeholder"
                width="100%"
              />
              <Placeholder
                className="text-placeholder"
                width="100%"
              />
              <Placeholder
                className="text-placeholder"
                width="100%"
              />
              <Placeholder
                className="text-placeholder"
                width="60%"
              />
            </p>
          </div>
        </div>
      </div>
      <div
        className="sto-app-additional-details grp-placeholder"
      >
        <Placeholder
          className="text-placeholder"
          width="10rem"
        />
        <Placeholder
          className="text-placeholder"
          width="16rem"
        />
        <Placeholder
          className="text-placeholder"
          width="20rem"
        />
        <Placeholder
          className="text-placeholder"
          width="15rem"
        />
        <Placeholder
          className="text-placeholder"
          width="18rem"
        />
        <Placeholder
          className="text-placeholder"
          width="13rem"
        />
      </div>
    </div>
  </div>
</div>
`;
